# ChangeLog for app-editors/emacs-vcs
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*emacs-vcs-24.3.9999 (03 Jan 2013)

  03 Jan 2013; Ulrich Müller <ulm@gentoo.org> +emacs-vcs-24.3.9999.ebuild,
  +metadata.xml:
  Copied from Portage tree.
